<resources>
    <string name="app_name">Laboratory Work 2. PZPI-17-1. Bulhakov Anton</string>
    <string name="note_image">Note Image</string>
    <string name="sure_delete"><![CDATA[Are you sure want to delete this note&]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="note_title">Note title</string>
    <string name="low">Low</string>
    <string name="middle">Middle</string>
    <string name="high">High</string>
    <string name="note_priority">Priority</string>
    <string name="note_text">Note text</string>
    <string name="create_note">Create Note</string>
    <string name="decline">Cancel</string>
    <string name="add">Add</string>
</resources>